fix align text name seasons

--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ body {
   }
 
   .season-one, .season-two {
-    padding-top: 85px;
+    padding-top: 87px;
     line-height: 7rem;
   }
 
@@ -412,7 +412,7 @@ body {
   }
 
   .season-four, .season-five {
-    padding-top: 100px;
+    padding-top: 103px;
     line-height: 5rem;
   }
 }
